# testActions

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  renovate-dhi.config.js
.github/workflows/: ci.yml  renovate-dhi.yml
digest-refresh-test/: README.md
digest-refresh-test/consumer/: Dockerfile
digest-refresh-test/dhi-consumer/: Dockerfile
digest-refresh-test/fixture/: Dockerfile
scripts/: build-digest-fixture.sh  write-digest-consumer.sh
src/taskstats/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
tests/fixtures/: tasks.csv  tasks.json
