[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskstats-demo"
version = "0.1.0"
description = "A tiny task statistics CLI for testing GitHub Actions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Demo Project" }]
license = "MIT"
keywords = ["cli", "tasks", "github-actions"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
taskstats = "taskstats.cli:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.uv]
required-version = ">=0.11.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
